--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Le P'tit Bistrot"
+      content="Restaurant Le P'tit Bistrot de Saint Montan - Ardeche "
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
